2007-08-13  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs : switch to IntPtr marshaling for struct types
	in the managed to native direction.
	* gtk/*.custom : adjust to new gapi struct pinvoke sigs.

2007-08-01  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : use Parameters.NativeCallbackSignature.
	* generator/Ctor.cs : use Parameters.ImportSignature prop.
	* generator/ImportSignature.cs : kill
	* generator/MethodBase.cs : kill ImportSignature prop.
	* generator/Method.cs : use Parameters.ImportSignature prop.
	* generator/NativeCallbackSignature.cs : kill
	* generator/Parameters.cs : add ImportSig and NativeCallbackSig.
	* generator/Signal.cs : use Parameters.NativeCallbackSignature prop.
	* generator/VirtualMethod.cs : use Parameters.ImportSignature prop.

2007-07-31  Mike Kestner  <mkestner@novell.com>

	* generator/Ctor.cs : Validate before generating and adjust protection
	on a couple private methods.
	* generator/Parameters.cs : remove unused var to kill warning.

2007-07-30  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBody.cs : refactor finish logic into parameter.
	* generator/Parameters.cs : refactor finish logic into parameter and
	fix some failures to marshal ref params post call.

2007-07-27  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs : only generate Copy override for methods
	with no parameters.  Fixes a gnome-sharp build problem.

2007-07-26  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : beef up error message for signal vm parse.
	[Fixes #82149]

2007-07-24  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : bump version and tag 2.10.2. 

2007-07-20  Mike Kestner  <mkestner@novell.com>

	* gtk/Calendar.custom : workaround invalid states in widget when
	raising month_changed signals.  [Fixes #78524]

2007-07-20  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api-2.10.raw : refresh.
	* parser/gapi_pp.pl : combine lines that end in '\' before sending