@@ -24,36 +24,39 @@ namespace GtkSharp.Generation {
 
 	using System;
 
-	public class ByRefGen : SimpleBase {
+	public class ByRefGen : SimpleBase, IManualMarshaler {
 		
 		public ByRefGen (string ctype, string type) : base (ctype, type) {}
 		
 		public override string MarshalType {
 			get {
-				return "ref " + QualifiedName;
-			}
-		}
-
-		public override string MarshalReturnType {
-			get {
-				return QualifiedName;
-			}
-		}
-
-		public override string ToNativeReturnType {
-			get {
-				return QualifiedName;
+				return "IntPtr";
 			}
 		}
 
 		public override string CallByName (string var_name)
 		{
-			return "ref " + var_name;
+			return "native_" + var_name;
 		}
 		
-		public override string ToNativeReturn(string var)
+		public string AllocNative ()
 		{
-			return var;
+			return "Marshal.AllocHGlobal (Marshal.SizeOf (typeof (" + QualifiedName + ")))";
+		}
+
+		public string AllocNative (string var_name)
+		{
+			return "GLib.Marshaller.StructureToPtrAlloc (" + var_name + ")";
+		}
+
+		public override string FromNative (string var_name)
+		{
+			return String.Format ("({0}) Marshal.PtrToStructure ({1}, typeof ({0}))", QualifiedName, var_name);
+		}
+
+		public string ReleaseNative (string var_name)
+		{
+			return "GLib.Marshaller.Free (" + var_name + ")";
 		}
 	}
 }
