@@ -1,5 +1,10 @@
 2007-08-13  Mike Kestner  <mkestner@novell.com>
 
+	* generator/ByRefGen.cs : implement IManualMarshaler.
+	* generator/Parameter.cs : use StructParameter for ByRefGen.
+
+2007-08-13  Mike Kestner  <mkestner@novell.com>
+
 	* generator/*.cs : switch to IntPtr marshaling for struct types
 	in the managed to native direction.
 	* gtk/*.custom : adjust to new gapi struct pinvoke sigs.
